tests/pos/interop_typetags_are_manifests/universe_2.scala
package scala.reflect

import scala.reflect.api

package object runtime {

  lazy val universe: api.JavaUniverse = new api.JavaUniverse {}

}
