tests/neg/interop_typetags_arenot_classmanifests/universe_2.scala
package scala.reflect

package object runtime {

  lazy val universe: api.Universe = new api.Universe {}

}
